--- a/index.html
+++ b/index.html
@@ -28,16 +28,21 @@
     <label for="usuario-reserva">Usuario:</label>
     <input type="text" id="usuario-reserva"><br>
 
-    <button type="submit">Reservar</button>
+    <button type="submit" id="boton-reservar">Reservar</button>
   </form>
+
+  <input type="file" id="input-archivo" accept=".json"><br>
+  <button id="boton-cargar-respaldo">Cargar Respaldo</button>
 
   <h2>Reservaciones por día</h2>
   <div id="reservaciones-por-dia"></div>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <script src="db.js"></script>
   <script src="dates.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
